completed html and js

--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
             I love animation and have been working on drawing characters as a hobby. One day I hope to be able to do that full time!
         </p>
     </div>
+     <div class="othergoals">
+         <h4>Here is a list of my othe goasl!</h4>
+         <ul>
+             <li>Learn to play guitar professionally</li>
+             <li>Travel around the US</li>
+             <li>Get my first web dev job</li>
+             <li>Own 2 Dogs and 2 Cats</li>
+         </ul>
+     </div>
 
 
 
